<resources>
    <string name="app_name">激おこ</string>
    <string name="set_station">駅を指定</string>
    <string name="set_time">時間を指定</string>
    <string name="set_location">現在地を指定</string>
    <string name="set_prefectures_name">設定した都道府県名</string>
    <string name="prefectures_default_name">未設定</string>
    <string name="started_check_location">チェックをストップ</string>
    <string name="not_start_check_location">チェックをスタート</string>

    <!-- ツールバー -->
    <string name="toolbar_select_preferences">都道府県を選ぶ</string>
    <string name="toolbar_select_line">沿線を選ぶ</string>
    <string name="toolbar_select_station">駅を選ぶ</string>

    <!--通知-->
    <string name="notification_title">時間です</string>
    <string name="notification_text_for_time">指定した時刻になりました</string>
    <string name="notification_text_for_station">間もなく駅に到着します</string>

    <!--チュートリアル-->
    <string name="tutorial_title">簡単２ステップで始めましょう！</string>
    <string name="tutorial_first_step_read_num1">①</string>
    <string name="tutorial_first_step_read_train">電車</string>
    <string name="tutorial_first_step_read_text">マークから駅を登録</string>
    <string name="tutorial_first_step_text1">画面上部の電車マークをタップ。</string>
    <string name="tutorial_first_step_text2">降りたい駅の沿線から駅を選びましょう。</string>
    <string name="tutorial_second_step_read_text">②位置情報のチェックをスタート</string>
    <string name="tutorial_second_step_text1">電車に乗ったら「チェックをスタート」ボタンをタップ。</string>
    <string name="tutorial_second_step_text2">位置情報の取得が始まり、登録駅に到着すると通知とバイブレーションでお知らせします。</string>
    <string name="tutorial_detail_text1">※詳細な利用方法は</string>
    <string name="tutorial_detail_text2"><u>GooglePlayストア</u></string>
    <string name="tutorial_detail_text3">をご覧ください。</string>

    <string name="api_key_for_google_map">AIzaSyDbhaK7f2ZvOwSGqRI9h7R-HmYQaQoXDcw</string>
</resources>
