<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TutorialTitleTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_title"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/train_black"
                android:contentDescription="@string/tutorial_first_step_read_train"/>

            <TextView
                style="@style/TutorialReadTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_first_step_read_text"/>

        </LinearLayout>

        <TextView
            style="@style/TutorialTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_first_step_text1"/>
        <TextView
            style="@style/TutorialTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_first_step_text2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            style="@style/TutorialReadTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_second_step_read_text"/>
        <TextView
            style="@style/TutorialTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_second_step_text1"/>
        <TextView
            style="@style/TutorialTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_second_step_text2"/>

    </LinearLayout>

</ScrollView>